    not have been applied to 4.20 or later
  * Drop redundant part of "Install perf scripts non-executable"
  * Drop "kbuild: Use -nostdinc in compile tests", which is no longer needed
  * debian/rules.d/scripts/kconfig: Update for upstream file renaming
  * debian/rules.d/scripts/mod: Add uuid_t and UUID_STRING_LEN definitions
  * liblockdep: Disable until it can be built again

  [ Vagrant Cascadian ]
  * [arm64] Enable modules to support audio on pinebook: SND_SUN4I_I2S,
    SND_SUN8I_CODEC, SND_SUN50I_CODEC_ANALOG, SND_SIMPLE_CARD,
    SND_SOC_SIMPLE_AMPLIFIER. (Closes: #921019)

  [ Romain Perier ]
  * Refreshed patch
    debian/revert-objtool-fix-config_stack_validation-y-warning.patch, so it
    can be applied against >= 5.0.7.
  * Enable coreboot memconsole (Closes: #872069)

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 22 Mar 2019 03:41:34 +0000

linux (5.0.2-1~exp1) experimental; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.0.2

  [ Vagrant Cascadian ]
  * [arm64,armhf] Enable PHY_ROCKCHIP_INNO_HDMI as modules.

  [ Ben Hutchings ]
  * [amd64] kexec: Enable KEXEC_SIG, replacing KEXEC_VERIFY_SIG
  * [armel] MTD: Enable MTD_PHYSMAP as module and set MTD_PHYSMAP_OF=y
    - udeb: Include physmap instead of physmap_of in mtd-modules (fixes FTBFS)
  * [armhf] sound/soc/ti: Enable SND_SOC_DAVINCI_MCASP, SND_SOC_NOKIA_RX51,
    SND_SOC_OMAP3_PANDORA, SND_SOC_OMAP3_TWL4030, SND_SOC_OMAP_ABE_TWL6040
    as modules; replacing SND_DAVINCI_SOC_MCASP, SND_OMAP_SOC_RX51,
    SND_OMAP_SOC_OMAP3_PANDORA, SND_OMAP_SOC_OMAP_TWL4030,
    SND_OMAP_SOC_OMAP_ABE_TWL6040 respectively
  * udeb: Add thermal_sys to kernel-image (fixes FTBFS on mips*, ppc64*,
    riscv64)
  * [powerpc*] mm: Only define MAX_PHYSMEM_BITS in SPARSEMEM configurations
    (fixes FTBFS on powerpc, powerpcspe)
  * debian/source/lintian-overrides: Override license-problem-gfdl-invariants
    in more files