@@ -1,12 +1,11 @@
 From: Ben Hutchings <ben@decadent.org.uk>
-Date: Thu, 9 Jun 2016 23:35:08 +0100
+Date: Sun, 19 May 2019 17:17:33 +0100
 Subject: cpupower: Bump soname version
-Forwarded: http://mid.gmane.org/20160610005619.GQ7555@decadent.org.uk
 
-Several functions in the libcpupower API are renamed or removed in
-Linux 4.7.  This is an backward-incompatible ABI change, so the
-library soname should change from libcpupower.so.0 to
-libcpupower.so.1.
+Several functions in the libcpupower API were renamed or removed in
+Linux 4.7, and again in 5.1.  This is a backward-incompatible ABI
+change, so the library soname should change from libcpupower.so.0 to
+libcpupower.so.2.
 
 Fixes: ac5a181d065d ("cpupower: Add cpuidle parts into library")
 Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
@@ -14,16 +13,16 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
  tools/power/cpupower/Makefile | 2 +-
  1 file changed, 1 insertion(+), 1 deletion(-)
 
-diff --git a/tools/power/cpupower/Makefile b/tools/power/cpupower/Makefile
-index 8358863259c5..0b85f5915ce8 100644
 --- a/tools/power/cpupower/Makefile
 +++ b/tools/power/cpupower/Makefile
-@@ -64,7 +64,7 @@ DESTDIR ?=
+@@ -65,8 +65,8 @@ DESTDIR ?=
+ # and _should_ modify the PACKAGE_BUGREPORT definition
  
  VERSION=			$(shell ./utils/version-gen.sh)
- LIB_MAJ=			0.0.1
+-LIB_MAJ=			0.0.1
 -LIB_MIN=			0
-+LIB_MIN=			1
++LIB_MAJ=			2.0.1
++LIB_MIN=			2
  
  PACKAGE =			cpupower
  PACKAGE_BUGREPORT =		linux-pm@vger.kernel.org
