@@ -634,7 +634,7 @@ ifneq ($(filter i386 amd64 x32,$(DEB_HOST_ARCH)),)
 	$(call make-tools,tools/power/x86)
 endif
 
-install-cpupower: DH_OPTIONS = -plinux-cpupower -plibcpupower1 -plibcpupower-dev
+install-cpupower: DH_OPTIONS = -plinux-cpupower $(addprefix -p,$(filter libcpupower%,$(packages_enabled)))
 install-cpupower: DIR = $(CURDIR)/debian/cpupower-tmp
 install-cpupower: build-cpupower
 	dh_testdir
