@@ -11,7 +11,7 @@ Description: CPU power management tools for Linux
  .
  ${cpupower:Arch-Description}
 
-Package: libcpupower1
+Package: libcpupower2
 Build-Profiles: <!stage1 !pkg.linux.notools>
 Section: libs
 Architecture: linux-any
