@@ -15,6 +15,7 @@ linux (5.1.3-1~exp1) UNRELEASED; urgency=medium
   * debian/rules.d/scripts/kconfig: Update for upstream file renaming
   * debian/rules.d/scripts/mod: Add uuid_t and UUID_STRING_LEN definitions
   * liblockdep: Disable until it can be built again
+  * libcpupower: Bump soversion since 2 exported functions have been removed
 
   [ Vagrant Cascadian ]
   * [arm64] Enable modules to support audio on pinebook: SND_SUN4I_I2S,
